// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForemanModal rendering renders header and footer in correct order regardless of ordering of children 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ForemanModal
    id="unordered"
    title="Test modal"
  >
    <div>
      This is the body
    </div>
    <ForemanModalFooter>
      this is the footer
    </ForemanModalFooter>
    <ForemanModalHeader>
      this is the header
    </ForemanModalHeader>
  </ForemanModal>
</Provider>
`;

exports[`ForemanModal rendering renders when header and footer are supplied 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ForemanModal
    id="withSuppliedChildren"
    title="Test modal"
  >
    <ForemanModalHeader>
      this is the header
    </ForemanModalHeader>
    <div>
      This is the body
    </div>
    <ForemanModalFooter>
      this is the footer
    </ForemanModalFooter>
  </ForemanModal>
</Provider>
`;

exports[`ForemanModal rendering should render 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ForemanModal
    id="render"
    title="Test modal"
  />
</Provider>
`;

exports[`ForemanModal rendering should render closed 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ForemanModal
    id="closed"
    title="Test modal"
  />
</Provider>
`;
